--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -138,3 +138,14 @@
     /* Tailwind size control */
   }
 }
+
+.editor-container {
+  margin: 0 auto;
+  width: 800px;
+}
+
+.ProseMirror {
+  width: 100%;
+  height:20rem;
+  overflow-y: auto;
+}
