--- a/frontend/src/components/tiptap-templates/simple/simple-editor.scss
+++ b/frontend/src/components/tiptap-templates/simple/simple-editor.scss
@@ -32,14 +32,18 @@ body {
 
 .tiptap.ProseMirror {
   font-family: "DM Sans", sans-serif;
+  min-height: 70vh;
+
 }
 
 .content-wrapper {
-  flex:1;
+  flex: 1;
   height: calc(100% - var(--tt-toolbar-height));
+  // height: 100%;
   overflow-y: auto;
-padding:1rem;
-min-height: 0 ;
+  padding: 1rem;
+  min-height: 0;
+
   &::-webkit-scrollbar {
     display: block;
     width: 0.5rem;
@@ -60,10 +64,11 @@ min-height: 0 ;
 }
 
 .simple-editor-content {
-  max-width: 640px;
+  min-width: 640px;
   width: 100%;
   margin: 0 auto;
-  
+  min-height: 700px;
+  height: 100%;
 }
 
 .simple-editor-content .tiptap.ProseMirror {
